--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="image-container">
           <a href="MMC_1/kayak.JPG" target="_blank">
             <img src="MMC_1/kayak.JPG" alt="Me Kayaking near Monterrey, California in 2022"
-              title="Me Kayaking near Monterrey, California in 2022" style="width:100%" class="w3-hover-opacity">
+              title="Me kayaking near Monterrey, California in 2022" style="width:100%" class="w3-hover-opacity">
           </a>
           <div class="overlay-text">Kayaking near Monterrey, California, 2022</div>
         </div>
