Small edit to rebuild

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <p>
             <img src="assets/IMG_6759.jpg" alt="SIP Team 6" style="float:right; width:50%; margin:0 0 1em 1em;">
             Created a full end-to-end web app which analyzed code diffs from enterprise GitHub to gather insights on
-            Pull Requests including how much to test and what the major changes were. (Won the Summer Innovations
-            Project competition)
+            Pull Requests including how much to test and what the major changes were. Also, I won the Summer Innovations
+            Project competition.
           </p>
 
         </div>
