Fixing links on main page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       <div class="w3-third w3-container w3-margin-bottom">
         <div class="w3-container w3-white">
           <h3><b>Porridge - Cigna</b></h3>
-          <img src="MMC_1/SIP.JPG" alt="SIP Team 6" style="width:100%">
+          <a href="MMC_1/SIP.JPG" target="_blank">
+            <img src="MMC_1/SIP.JPG" alt="SIP Team 6" style="width:100%" class="w3-hover-opacity">
+          </a>
           <p>
             <img src="assets/IMG_6759.jpg" alt="SIP Team 6" style="float:right; width:50%; margin:0 0 1em 1em;">
             Created a full end-to-end web app which analyzed code diffs from enterprise GitHub to gather insights on
@@ -81,7 +83,7 @@
       </div>
       <div class="w3-third w3-container">
         <div class="w3-container w3-white">
-          <a href="https://github.com/alexasheldon/cs4775_final_project_phylogeny_red_pandas">
+          <a href="https://github.com/alexasheldon/cs4775_final_project_phylogeny_red_pandas" target="_blank">
             <h4><b>Red Panda Phylogeny Analysis</b></h4>
           </a>
           <p>Conducted a phylogenetic analysis of red pandas using mitochondrial DNA sequences (creating a possible
